--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+*.swp
+*.import
+test_suite/addons
+test_suite/addons/*
+test_suite/.import/*
+
 # Godot-specific ignores
 .import/
 export.cfg
@@ -9,7 +15,3 @@ export_presets.cfg
 # Mono-specific ignores
 .mono/
 data_*/
-
-# music assets
-.wav
-.wav.import
